@@ -11,18 +11,10 @@ EBUILD emacs-cvs-22.0.97.ebuild 7416 RMD160 9f87be5c3b98631765c1d48a1885cacf89db
 MD5 c2b22e49c8d02a4bf404954e897e832a emacs-cvs-22.0.97.ebuild 7416
 RMD160 9f87be5c3b98631765c1d48a1885cacf89db694e emacs-cvs-22.0.97.ebuild 7416
 SHA256 5baf38fdbc9b2180b75a6246dfc88526311a1fba6acff653539c1842b0db489a emacs-cvs-22.0.97.ebuild 7416
-EBUILD emacs-cvs-22.0.9999-r9.ebuild 7571 RMD160 c5532d06d26c999551ee083f5b2c37714aac8cd8 SHA1 e4711158767cd96e5646fa2f8a10a92a7578e5ed SHA256 bc31e9939dffe772b0bd27715eeac9c57ae9fff3c7607c73b817be47e7a9bc97
-MD5 7ab72248e48215177511001eeab859c1 emacs-cvs-22.0.9999-r9.ebuild 7571
-RMD160 c5532d06d26c999551ee083f5b2c37714aac8cd8 emacs-cvs-22.0.9999-r9.ebuild 7571
-SHA256 bc31e9939dffe772b0bd27715eeac9c57ae9fff3c7607c73b817be47e7a9bc97 emacs-cvs-22.0.9999-r9.ebuild 7571
-EBUILD emacs-cvs-23.0.0-r5.ebuild 7812 RMD160 caec981f743d2af7200688bd0a45ef6bcaa747e4 SHA1 6da361db24f743fecb32eb500c74ef2dab2caed8 SHA256 95e2bdb5d545ea48640ff8e1683c5e91c706306d5d2d21a2e161a980d27cc874
-MD5 859a349092a15cfaad5ade7e498d9418 emacs-cvs-23.0.0-r5.ebuild 7812
-RMD160 caec981f743d2af7200688bd0a45ef6bcaa747e4 emacs-cvs-23.0.0-r5.ebuild 7812
-SHA256 95e2bdb5d545ea48640ff8e1683c5e91c706306d5d2d21a2e161a980d27cc874 emacs-cvs-23.0.0-r5.ebuild 7812
-MISC ChangeLog 10228 RMD160 c91fb10a4555a9b5f57f8e3915be6d8c6d38afed SHA1 3c90c75dfa31852255d7538a81fd70460a4e17d5 SHA256 1d36888eb5f7f06afb8ce1c93e237f19009273e4d24b71860c7470d878fc3737
-MD5 7fb50a6ab6a35b86c77f63c127003369 ChangeLog 10228
-RMD160 c91fb10a4555a9b5f57f8e3915be6d8c6d38afed ChangeLog 10228
-SHA256 1d36888eb5f7f06afb8ce1c93e237f19009273e4d24b71860c7470d878fc3737 ChangeLog 10228
+MISC ChangeLog 10384 RMD160 8e2412944f53e22f4b30e6a59f19eb671580bcfa SHA1 1c050505912b57ccc910fb1edba488696ed7ad1c SHA256 ea56e3ee43763f92af4d58ac4b35f70ef1d838d0a83c4df6d255f0cc6589b088
+MD5 fdb6b21bedc848204de1d9b686f44d76 ChangeLog 10384
+RMD160 8e2412944f53e22f4b30e6a59f19eb671580bcfa ChangeLog 10384
+SHA256 ea56e3ee43763f92af4d58ac4b35f70ef1d838d0a83c4df6d255f0cc6589b088 ChangeLog 10384
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -30,9 +22,3 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 a45c1cc2431a74255c981575cf033f94 files/digest-emacs-cvs-22.0.97 247
 RMD160 1a034da94a1d0ea15deae209e53da79099b0ed97 files/digest-emacs-cvs-22.0.97 247
 SHA256 2cf2e7a1662db28db007818b2a58d1a4156216dcfdc2f8cee0dbba49517476a3 files/digest-emacs-cvs-22.0.97 247
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-22.0.9999-r9 0
-RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-22.0.9999-r9 0
-SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-22.0.9999-r9 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-23.0.0-r5 0
-RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-23.0.0-r5 0
-SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-23.0.0-r5 0
