@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
+  -emacs-cvs-22.0.9999-r9.ebuild, -emacs-cvs-23.0.0-r5.ebuild:
+  removed as they are in Portage now
+
   14 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.97.ebuild, emacs-cvs-22.0.9999-r9.ebuild,
   emacs-cvs-23.0.0-r5.ebuild:
